Fixed invisible links

--- a/themes/Idini/static/assets/css/site.css
+++ b/themes/Idini/static/assets/css/site.css
@@ -491,3 +491,8 @@ main {
   font-size: 1.2em;
   color: #ffffff;
 }
+
+
+.article-body a{
+color: #007bff;
+}
